@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2009-05-25  Ralf Wildenhues  &lt;Ralf.Wildenhues@gmx.de&gt;
+
+<UL>
+  <LI> version.sh: Define PACKAGE_STRING.
+
+</UL>
+<p>
 2009-05-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
