@@ -1,3 +1,7 @@
+2009-05-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* version.sh: Define PACKAGE_STRING.
+
 2009-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/resize.c (HorizontalFilter, VerticalFilter): When
